# flake8-no-pytest-mark-only

./: .gitignore  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yaml  release.yaml
scripts/: utils.py
src/flake8_no_pytest_mark_only/: __init__.py  plugin.py
tests/: test_PNO001.py
